# nba-model-and-ai

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  DEVELOPMENT_GUIDELINES.md  USAGE.md  pyproject.toml  research.md
.github/workflows/: ci.yaml
docs/: CLAUDE.md  history.html  index.html  model.html  predictions.html
docs/api/: performance.json  signals.json  today.json
docs/assets/: charts.js  style.css
implementation/: CLAUDE.md  codebase_review.md  phase1_code_review.md  phase1_review.md  phase1_summary.md  phase2_review.md  phase2a_summary.md  phase2b_summary.md  phase2c_summary.md  phase3_review.md  phase3_summary.md  phase4_review.md  phase4_summary.md  phase5_review.md  phase5_summary.md  phase6_review.md  phase6_summary.md  phase7_review.md  phase7_summary.md  phase8_review.md  phase8_summary.md
nba_model/: CLAUDE.md  __init__.py  cli.py  config.py  logging.py  types.py
nba_model/backtest/: CLAUDE.md  __init__.py  devig.py  engine.py  kelly.py  metrics.py
nba_model/data/: CLAUDE.md  __init__.py  api.py  checkpoint.py  db.py  models.py  pipelines.py  quality.py  schema.py  stints.py  validation.py
nba_model/data/collectors/: CLAUDE.md  __init__.py  base.py  boxscores.py  games.py  players.py  (+2 more)
nba_model/features/: CLAUDE.md  __init__.py  fatigue.py  normalization.py  parsing.py  rapm.py  spatial.py
nba_model/models/: CLAUDE.md  __init__.py  dataset.py  fusion.py  gnn.py  registry.py  trainer.py  transformer.py
nba_model/monitor/: CLAUDE.md  __init__.py  drift.py  triggers.py  versioning.py
nba_model/output/: CLAUDE.md  __init__.py  charts.py  dashboard.py  reports.py
nba_model/predict/: CLAUDE.md  __init__.py  inference.py  injuries.py  signals.py
plan/: CLAUDE.md  implementation_plan.md  phase1.md  phase2.md  phase2a.md  phase2b.md  phase2c.md  phase3.md  phase4.md  phase5.md  phase6.md  phase7.md  phase8.md
templates/: CLAUDE.md  base.html  history.html  index.html  model.html  predictions.html
test_output/: CLOSED_ticket-001-data-status-missing-data-dir.md  CLOSED_ticket-002-data-update-missing-data-dir.md  CLOSED_ticket-003-missing-timestamp-columns-game-stats.md  RESOLVED_playbyplay_api_structure_incompatibility.md  RESOLVED_ticket-004-dashboard-build-same-file-error.md  RESOLVED_ticket-005-missing-timestamp-columns-season-stats.md  RESOLVED_ticket_02.md  RESOLVED_ticket_03.md  RESOLVED_ticket_04.md  ticket-001-data-status-missing-data-dir.md  ticket-002-data-update-missing-data-dir.md  ticket-003-missing-timestamp-columns-game-stats.md  ticket-004-dashboard-build-same-file-error.md  ticket-005-missing-timestamp-columns-season-stats.md
tests/: CLAUDE.md  __init__.py  conftest.py
tests/fixtures/: .gitkeep  boxscoreadvancedv2_response.json  boxscoreplayertrackv2_response.json  boxscoretraditionalv2_response.json  commonplayerinfo_response.json  commonteamroster_response.json  leaguegamefinder_response.json  playbyplayv2_response.json  shotchartdetail_response.json
tests/integration/: CLAUDE.md  __init__.py  test_backtest_pipeline.py  test_data_pipeline.py  test_feature_pipeline.py  test_monitor_pipeline.py  test_output_pipeline.py  test_predict_pipeline.py  test_training_pipeline.py
tests/unit/: CLAUDE.md  __init__.py  conftest.py  test_cli.py  test_config.py  test_logging.py  test_types.py
(+52 files in other folders)
